[project]
name = "mhpss-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.22",
    "langfuse>=3.0.1",
    "langgraph>=0.4.8",
]
